# edgehog-device-runtime-proto

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  REUSE.toml  buf.yaml  cliff.toml  new  rust-toolchain.toml
.github/: dependabot.yml
.github/actions/: install-deps.yaml
.github/workflows/: changelog.yaml  check.yaml  ci.yaml  codegen.yaml  main.yaml  protobuf.yaml  publish.yaml  reuse-lint.yaml  rust-check.yaml  test.yaml  warmup-caches.yaml
.reuse/templates/: apache-2.jinja2
output/: edgehog.deviceruntime.containers.v1.rs
proto/edgehog/deviceruntime/containers/: v1.proto
proto/edgehog/deviceruntime/containers/v1/: v1.proto
rust/: .gitignore  Cargo.toml
rust/codegen/: Cargo.toml
rust/codegen/src/: main.rs
rust/edgehog-device-runtime-proto/: Cargo.toml  README.md
rust/edgehog-device-runtime-proto/src/: edgehog.deviceruntime.containers.v1.rs  lib.rs
scripts/: changelog-comment.sh  changelog-update.sh  generate-and-check.sh  github-release.sh  proto-check-breaking-changes.sh
