# This file is part of Edgehog.
#
# Copyright 2025 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = ["codegen", "edgehog-device-runtime-proto"]
resolver = "2"

[workspace.package]
version = "0.10.0-aplha.1"
edition = "2021"
homepage = "https://edgehog.io"
license = "Apache-2.0"
repository = "https://github.com/edgehog-device-manager/edgehog-device-runtime-proto"
rust-version = "1.78"

[workspace.dependencies]
clap = "4.5.41"
color-eyre = "0.6.5"
eyre = "0.6.12"
tonic-build = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
